--- a/pkg/lib/gateway/web/app/src/entities/sandbox/styles.css
+++ b/pkg/lib/gateway/web/app/src/entities/sandbox/styles.css
@@ -1,7 +1,99 @@
-.pipeline-node__handle {
-    background: #555;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    transition: box-shadow 0.3s ease;
+:root {
+    --white: #D9D9D9;
+    --gray: #4D4D4D;
+    --dark-gray: #262626;
+    --pipeline-node-border-radius: 8px;
+}
+
+.pipeline__handle_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 13px;
+    margin-bottom: 8px;
+}
+
+.pipeline__handle {
+    --size: 14px;
+    min-width: var(--size);
+    width: var(--size);
+    height: var(--size);
+    background-color: var(--white);
+    border-color: var(--dark-gray);
+    border-width: 2px;
+    position: relative;
+    top: auto;
+    transform: none;
+}
+
+.pipeline__input_handle {
+    left: 0;
+}
+
+.pipeline__output_handle {
+    right: 0;
+}
+
+.pipeline__label {
+    color: var(--white);
+    font-weight: 500;
+}
+
+.pipeline__input_label {
+    margin-left: 4px;
+}
+
+.pipeline__output_label {
+    margin-right: 4px;
+}
+
+.pipeline__handle_set {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.pipeline__output_handle_set {
+    align-items: end;
+}
+
+.pipeline__node_status_label {
+    margin-left: 4px;
+    color: rgba(217, 217, 217, 0.5);
+    font-size: x-small;
+}
+
+.pipeline__node {
+    position: relative;
+    min-width: 180px;
+    min-height: 120px;
+    padding-bottom: 20px;
+    border-radius: var(--pipeline-node-border-radius);
+    display: flex;
+    flex-direction: column;
+    background-color: var(--gray);
+}
+
+.pipeline__node_header {
+    display:flex;
+    width:100%;
+    height:25px;
+    padding: 2px;
+    border-radius:var(--pipeline-node-border-radius) var(--pipeline-node-border-radius) 0 0;
+    background-color:#D9D9D9;
+    align-items:center;
+}
+
+.pipeline__node_header_text {
+    color: #262626;
+    font-weight: 600;
+}
+
+.pipeline__node_handle_type {
+    padding-left: 2px;
+    padding-right: 2px;
+    background: var(--dark-gray);
+    border-radius: 3px;
+    opacity: 0.5;
 }
